# tridme-sandbox

./: .gitignore  CMakeLists.txt  Color.shader  Light.shader  README.md  main  main.cpp  makefile
